--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "animate.css": "^4.1.1",
     "debounce": "^2.2.0",
     "lodash": "^4.17.21",
