--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "twilio": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
