--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "debounce": "^2.2.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
-    "next": "15.2.0",
+    "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
     "twilio": "^5.5.0"
   },
   "devDependencies": {
